[package]
name = "TerminalMediaPlayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
eventual = "0.1.7"
dirs = "4.0.0"
rodio = "0.15.0"
crossterm = "0.24.0"
term_size = "0.3.2"
lazy_static = "1.4.0"